# TaskScheduler

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
src/: interactive_funcs.py  main.py
src/contracts/: source.py  task.py  task_queue.py
src/contracts/descriptors/: date_descriptor.py  int_descriptor.py  positive_int_descriptor.py  str_descriptor.py
src/contracts/exceptions/: exceptions.py
src/sources/: api_source.py  file_source.py  generator_source.py  json_source.py  manual_input.py
src/task_queue/: task_queue.py
tests/: test_file_source.py  test_generator.py  test_json.py  test_manual.py  test_task.py  test_task_queue.py
